--- a/VolleyballScoreSheet/Views/Card/SelectTeam.xaml
+++ b/VolleyballScoreSheet/Views/Card/SelectTeam.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="VolleyballScoreSheet.Views.Card.DelayPenalty"
+    x:Class="VolleyballScoreSheet.Views.Card.SelectTeam"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://prismlibrary.com/"
@@ -19,11 +19,10 @@
 
     <StackPanel>
         <wpfui:TitleBar
-            Title="ディレイペナルティ"
+            Title="{Binding Title.Value}"
             ShowMaximize="False"
             ShowMinimize="False" />
-
-        <TextBlock Margin="15,0" Text="相手チームに1点とサーブ権が与えられます" />
+        <TextBlock Margin="10,0" Text="{Binding Message.Value}" />
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
